<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp"
    android:background="@color/MediumSeaGreen">
    <TextView
        android:id="@+id/userProfile"
        android:layout_width="300dp"
        android:layout_height="70dp"
        android:text="@string/user_name_default"
        android:textSize="24dp"
        android:textStyle="bold"
        android:textColor="@color/white"
        android:paddingTop="17dp"/>
    <ImageView
        android:id="@+id/arrowPic"
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:layout_toRightOf="@id/userProfile"
        android:src="@drawable/arrow"/>
    <ImageView
        android:id="@+id/profileImage"
        android:layout_width="190dp"
        android:layout_height="190dp"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="100dp"
        android:src="@drawable/moon"
        android:contentDescription="@string/profile_image" />
    <TextView
        android:id="@+id/loginStatus"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/profileImage"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="50dp"
        android:text="@string/not_logged_in"
        android:textColor="@color/white"
        android:textSize="20sp"/>
    <View
        android:id="@+id/divider"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_below="@id/loginStatus"
        android:layout_marginTop="24dp"
        android:background="@color/MediumSeaGreen" />
    <Button
        android:id="@+id/btnLogin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/divider"
        android:layout_marginTop="30dp"
        android:background="@color/palegreen"
        android:text="@string/login"
        android:textAllCaps="false"
        android:textColor="@color/white"
        android:textSize="16sp" />
    <Button
        android:id="@+id/btnRegister"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/btnLogin"
        android:layout_marginTop="12dp"
        android:background="@color/palegreen"
        android:text="@string/register"
        android:textAllCaps="false"
        android:textColor="@color/white"
        android:textSize="16sp" />
</RelativeLayout>